tests/sumo/extended/simulation_routing/assignment/errors/unknown_taz/vehroutes.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 05/02/13 14:16:09 by SUMO sumo Version 0.17.0
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_districts.taz.xml,input_trips.trips.xml"/>
    </input>

    <output>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <time>
        <begin value="0"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

    <routing>
        <device.rerouting.probability value="1"/>
        <device.rerouting.with-taz value="true"/>
    </routing>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
</routes>
